8334733: Remove obsolete @enablePreview from tests after JDK-83324714