@@ -52,9 +52,7 @@ public class SnippetsTest {
                     var compilationUnits = fileManager.getJavaFileObjectsFromFiles(List.of(src));
                     fileManager.setLocation(StandardLocation.CLASS_OUTPUT,
                             List.of(Paths.get(System.getProperty("test.classes", ".")).toFile()));
-                    var task = compiler.getTask(null, fileManager, null, List.of(
-                            "--enable-preview",
-                            "--source", String.valueOf(Runtime.version().feature())),
+                    var task = compiler.getTask(null, fileManager, null, List.of(),
                             null, compilationUnits);
                     if (task.call()) return;
                     throw new RuntimeException("Error compiling " + source);
